Improve example and change leveldb encoding to json

--- a/test.html
+++ b/test.html
@@ -1,18 +1,45 @@
 <!DOCTYPE HTML>
 <html>
 	<head>
-	    <title>Fire</title>
+	    <title>LargeMouth BAAS</title>
 		<meta http-equiv="X-UA-Compatible" content="chrome=1">
+		<link rel="stylesheet" href="http://yui.yahooapis.com/pure/0.3.0/pure-min.css">
+
+		<script src="//cdnjs.cloudflare.com/ajax/libs/angular.js/1.1.5/angular.min.js"></script>
         <script src="//cdnjs.cloudflare.com/ajax/libs/socket.io/0.9.16/socket.io.min.js"></script>
 		<script src="smallmouth.js"></script>
 		<script>
-			var resource1 = new SmallMouth('http://10.1.11.36:3000/someObject');
-			var resource2 = new SmallMouth('http://10.1.11.36:3000/somethingElse');
+			var chats = new SmallMouth('http://10.1.11.36:3000/chats');
 
-			resource1.on('value', function(snapshot) {
-				console.log(snapshot);
-			});
+			function smallmouth($scope) {
+
+				$scope.chats = [];
+
+				chats.on('value', function(snapshot) {
+					$scope.chats = snapshot instanceof Array ? snapshot : [];
+					$scope.$digest();
+				});
+
+				$scope.newChat = "";
+
+				$scope.addChat = function(chat) {
+					$scope.chats.push(chat);
+					chats.set($scope.chats);
+					$scope.newChat = "";
+				};
+			}
 		</script>
 	</head>
-	<body></body>
+	<body ng-app>
+		<div ng-controller="smallmouth">
+			<ul>
+				<li ng-repeat="chat in chats">{{chat}}</li>
+			</ul>
+
+			<form ng-submit="addChat(newChat)" class="pure-form">
+				<span>Say something: <input type="text" ng-model="newChat" /></span>
+				<input type="submit" class="pure-button pure-button-primary">
+			</form>
+		</div>
+	</body>
 </html>
