--- a/test.html
+++ b/test.html
@@ -27,6 +27,10 @@
 					chats.set($scope.chats);
 					$scope.newChat = "";
 				};
+
+				$scope.clearAll = function() {
+					chats.set([]);
+				};
 			}
 		</script>
 	</head>
@@ -36,9 +40,10 @@
 				<li ng-repeat="chat in chats">{{chat}}</li>
 			</ul>
 
-			<form ng-submit="addChat(newChat)" class="pure-form">
+			<form class="pure-form">
 				<span>Say something: <input type="text" ng-model="newChat" /></span>
-				<input type="submit" class="pure-button pure-button-primary">
+				<button class="pure-button pure-button-primary" ng-click="addChat(newChat)">Add Chat</button>
+				<button class="pure-button" ng-click="clearAll()">Clear All</button>
 			</form>
 		</div>
 	</body>
