Replaced static ip address with localhost

--- a/test.html
+++ b/test.html
@@ -9,7 +9,7 @@
         <script src="//cdnjs.cloudflare.com/ajax/libs/socket.io/0.9.16/socket.io.min.js"></script>
 		<script src="smallmouth.js"></script>
 		<script>
-			var chats = new SmallMouth('http://10.1.11.36:3000/chats');
+			var chats = new SmallMouth('http://localhost:3000/chats');
 
 			function smallmouth($scope) {
 
